cmake_minimum_required(VERSION 3.12)

project(hs-issue)

# COMPILER FLAGS
set(PROJ_WARN_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS_DEBUG} ${PROJ_WARN_FLAGS}")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")

# Hyperscan
set(HYPERSCAN_ROOT $ENV{HOME}/dev/vendors/hyperscan)
find_library(HYPERSCAN NAMES libhs.a PATHS ${HYPERSCAN_ROOT} HINTS ${HYPERSCAN_ROOT}/lib64 REQUIRED)
find_path(HYPERSCAN_INCLUDE_DIR hs.h PATHS ${HYPERSCAN_ROOT} HINTS ${HYPERSCAN_ROOT}/include/hs REQUIRED)
if (NOT HYPERSCAN)
  MESSAGE(FATAL_ERROR "hyperscan not found!" )
endif()

MESSAGE("HYPERSCAN=${HYPERSCAN}")
MESSAGE("HYPERSCAN_INCLUDE_DIR=${HYPERSCAN_INCLUDE_DIR}")

add_executable(${PROJECT_NAME} report.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${HYPERSCAN_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} PUBLIC ${HYPERSCAN})
